--- a/ex01/src/index.html
+++ b/ex01/src/index.html
@@ -11,7 +11,7 @@
                 <img src="../photos/image1.jpg" alt="image1" style="width: 100%;" /> </a>
                  <h4>Lorem ipsum</h4>
                 <p> lorem ipsum lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore maghna aliqua. Ut enim ad minim venim, quis nostrud
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
                         reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur </p>
 
@@ -22,7 +22,7 @@
                 <img src="../photos/image2.jpg" alt="image2" style="width: 100%;" /> </a>
                  <h4>Lorem ipsum</h4>
                 <p> lorem ipsum lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore maghna aliqua. Ut enim ad minim venim, quis nostrud
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
                         reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur </p>
 
@@ -32,7 +32,7 @@
                 <img src="../photos/image3.jpg" alt="image3" style="width: 100%;" /> </a>
                  <h4>Lorem ipsum</h4>
                 <p> lorem ipsum lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore maghna aliqua. Ut enim ad minim venim, quis nostrud
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
                         reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur </p>
 
@@ -42,7 +42,7 @@
                 <img src="../photos/image4.jpg" alt="image4" style="width: 100%;" /> </a>
                  <h4>Lorem ipsum</h4>
                 <p> lorem ipsum lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore maghna aliqua. Ut enim ad minim venim, quis nostrud
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
                         reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur </p>
 
@@ -52,7 +52,7 @@
                 <img src="../photos/image5.jpg" alt="image5" style="width: 100%;" /> </a>
                  <h4>Lorem ipsum</h4>
                 <p> lorem ipsum lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore maghna aliqua. Ut enim ad minim venim, quis nostrud
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
                         reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur </p>
 
@@ -62,7 +62,7 @@
                 <img src="../photos/image6.jpg" alt="image7" style="width: 100%;" /> </a>
                  <h4>Lorem ipsum</h4>
                 <p> lorem ipsum lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore maghna aliqua. Ut enim ad minim venim, quis nostrud
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
                         reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur </p>
 
@@ -72,7 +72,7 @@
                 <img src="../photos/image7.jpg" alt="image7" style="width: 100%;" /> </a>
                  <h4>Lorem ipsum</h4>
                 <p> lorem ipsum lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore maghna aliqua. Ut enim ad minim venim, quis nostrud
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
                         reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur </p>
 
@@ -82,7 +82,7 @@
                 <img src="../photos/image8.jpg" alt="image8" style="width: 100%;" /> </a>
                  <h4>Lorem ipsum</h4>
                 <p> lorem ipsum lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore maghna aliqua. Ut enim ad minim venim, quis nostrud
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
                         reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur </p>
 
@@ -92,7 +92,7 @@
                 <img src="../photos/image9.jpg" alt="image9" style="width: 100%;" /> </a>
                  <h4>Lorem ipsum</h4>
                 <p> lorem ipsum lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore maghna aliqua. Ut enim ad minim venim, quis nostrud
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
                         reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur </p>
 
